# chess-on-a-cube

./: Cargo.toml  build_wasm.sh  index.html
.github/workflows/: rust.yml
assets/models/: bishop.glb  king.glb  knight.glb  pawn.glb  queen.glb  rook.glb  unit.glb
src/: .main.rs.rustfmt  ai.rs  cell.rs  cube_rotation.rs  gamemanager.rs  lib.rs  main.rs  materials.rs  movement.rs  scene.rs  ui.rs  units.rs  utils.rs
