[package]
name = "unnamed-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_eventlistener = "0.7.0"
bevy_mod_picking = "0.19.0"
derivative = "2.2.0"
