[package]
name = "unnamed-game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unnamed-game"
path = "src/main.rs"

[lib]
name = "unnamed_game"
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.13.2"
bevy_mod_picking = "0.19.0"
derivative = "2.2.0"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.13.2", default-features = true, features = [
    "webgl2",
] }
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.13.2", default-features = true, features = [
    "dynamic_linking",
] }

# Optimize for size when building for WASM
[profile.release]
# This is used by wasm-pack to tell browsers start up even faster:
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
